--- a/react/package.json
+++ b/react/package.json
@@ -5,9 +5,11 @@
     "@types/graphql": "^14.2.0",
     "@types/jest": "^24.0.11",
     "@types/node": "^11.13.2",
+    "@types/ramda": "^0.26.8",
     "@types/react": "^16.8.13",
     "@vtex/css-handles": "^1.0.2",
     "classnames": "^2.2.6",
+    "ramda": "^0.26.1",
     "react": "^16.8.6",
     "react-media": "^1.9.2"
   }
