--- a/react/package.json
+++ b/react/package.json
@@ -11,6 +11,6 @@
     "classnames": "^2.2.6",
     "ramda": "^0.26.1",
     "react": "^16.8.6",
-    "react-media": "^1.9.2"
+    "use-media": "^1.3.0"
   }
 }
