--- a/manifest.json
+++ b/manifest.json
@@ -17,5 +17,6 @@
   },
   "dependencies": {
     "vtex.store-components": "3.x"
-  }
+  },
+  "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
