--- a/react/package.json
+++ b/react/package.json
@@ -7,10 +7,12 @@
     "@types/node": "^11.13.2",
     "@types/ramda": "^0.26.8",
     "@types/react": "^16.8.13",
+    "@types/react-intl": "^2.3.17",
     "@vtex/css-handles": "^1.0.2",
     "classnames": "^2.2.6",
     "ramda": "^0.26.1",
     "react": "^16.8.6",
+    "react-intl": "^2.9.0",
     "use-media": "^1.3.0"
   }
 }
