--- a/react/package.json
+++ b/react/package.json
@@ -12,7 +12,6 @@
     "classnames": "^2.2.6",
     "ramda": "^0.26.1",
     "react": "^16.8.6",
-    "react-intl": "^2.9.0",
-    "use-media": "^1.3.0"
+    "react-intl": "^2.9.0"
   }
 }
