--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
   "builders": {
     "react": "3.x",
     "store": "0.x",
-    "messages": "1.x"
+    "messages": "1.x",
+    "docs": "0.x"
   },
   "mustUpdateAt": "2020-04-02",
   "categories": [],
