--- a/react/package.json
+++ b/react/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@vtex/css-handles": "^1.1.3",
     "classnames": "^2.2.6",
     "ramda": "^0.26.1",
     "react": "^16.8.6",
@@ -11,7 +12,6 @@
     "@types/node": "^11.13.2",
     "@types/ramda": "^0.26.8",
     "@types/react": "^16.8.13",
-    "@types/react-intl": "^2.3.17",
-    "@vtex/css-handles": "^1.1.3"
+    "@types/react-intl": "^2.3.17"
   }
 }
