--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "vtex.store-components": "3.x",
-    "vtex.device-detector": "0.x"
+    "vtex.device-detector": "0.x",
+    "vtex.responsive-values": "0.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
