Add @vtex/test-tools dependency

--- a/react/package.json
+++ b/react/package.json
@@ -5,12 +5,17 @@
     "react": "^16.8.6",
     "react-intl": "^2.9.0"
   },
+  "scripts": {
+    "test": "vtex-test-tools test"
+  },
   "devDependencies": {
     "@types/graphql": "^14.2.0",
-    "@types/jest": "^24.0.11",
+    "@types/jest": "^24.0.18",
     "@types/node": "^11.13.2",
     "@types/ramda": "^0.26.8",
     "@types/react": "^16.8.13",
-    "@types/react-intl": "^2.3.17"
+    "@types/react-intl": "^2.3.17",
+    "@vtex/test-tools": "^0.3.2",
+    "eslint-config-vtex-react": "^5.0.1"
   }
 }
