--- a/react/package.json
+++ b/react/package.json
@@ -6,11 +6,19 @@
     "react-intl": "^2.9.0"
   },
   "devDependencies": {
-    "@types/graphql": "^14.2.0",
     "@types/jest": "^24.0.11",
     "@types/node": "^11.13.2",
     "@types/ramda": "^0.26.8",
     "@types/react": "^16.8.13",
-    "@types/react-intl": "^2.3.17"
+    "@types/react-intl": "^2.3.17",
+    "@vtex/test-tools": "^1.2.0",
+    "eslint": "^6.5.1",
+    "eslint-config-vtex-react": "^5.0.1",
+    "prettier": "^1.18.2",
+    "tslint-eslint-rules": "^5.4.0",
+    "typescript": "3.5.2"
+  },
+  "resolutions": {
+    "@types/graphql": "14.0.7"
   }
 }
