--- a/react/package.json
+++ b/react/package.json
@@ -12,5 +12,6 @@
     "@types/ramda": "^0.26.8",
     "@types/react": "^16.8.13",
     "@types/react-intl": "^2.3.17"
-  }
+  },
+  "version": "0.12.1"
 }
